# NEXUS-NODE

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  nexus_dev.sh  nexus_node_architecture.mmd  package.json  railway.json  railway.toml  start.sh
backend/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  test_apis.py  test_governance_e2e.py
backend/governance/: auditor.py  pii_scrubber.py  supabase_client.py
backend/graph/: builder.py  edges.py  state.py
backend/graph/nodes/: governor.py  node_execute.py  node_plan.py  node_verify.py
backend/mcp/: github_client.py  health.py  salesforce_client.py  slack_client.py
backend/middleware/: auth.py
backend/migrations/: 001_create_audit_log.sql
backend/nexus_node_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/routers/: audit_router.py  hitl_router.py  mcp_router.py
backend/stores/: event_hub.py  task_store.py
backend/tests/: conftest.py  test_governor.py  test_graph_cycle.py  test_mcp_connectivity.py
backend/tools/: registry.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/governance/: page.tsx
frontend/app/integrations/: page.tsx
frontend/app/mesh/: page.tsx
frontend/components/: AppShell.tsx  LiveMesh.tsx  MCPStatusBar.tsx  Sidebar.tsx  ThoughtStream.tsx
frontend/lib/: api.ts  sse.ts
