[project]
name = "nexus-node-backend"
version = "0.1.0"
description = "NEXUS-NODE autonomous action mesh backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "langgraph==0.2.73",
    "langchain-core==0.3.44",
    "langchain-groq==0.2.4",
    "langchain-google-genai==2.0.9",
    "groq==0.13.1",
    "google-generativeai==0.8.4",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "supabase==2.11.0",
    "structlog==24.4.0",
    "slowapi==0.1.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "sse-starlette==2.2.0",
    "prometheus-client==0.21.1",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "httpx==0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PTH"]
ignore = ["S101", "S603"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]
